<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_underline_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtSignUpFName"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center|left"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_black"
                    android:textColorHint="@color/underline_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtSignUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center|left"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_black"
                    android:textColorHint="@color/underline_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtSignUpPhone"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center|left"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_black"
                    android:textColorHint="@color/underline_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtSignUpCmpName"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center|left"
                    android:hint="@string/company_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_black"
                    android:textColorHint="@color/underline_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtSignUpDesign"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center|left"
                    android:hint="@string/designation"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_black"
                    android:textColorHint="@color/underline_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtSignUpPwd"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center|left"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_black"
                    android:textColorHint="@color/underline_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtSignUpCnfPwd"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center|left"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_black"
                    android:textColorHint="@color/underline_color"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center|left"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Networking : "
                        android:textColor="@color/dark_black"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/rdgProfileType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rdPublic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="Public"
                            android:textColor="@color/dark_black"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/rdPrivate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:checked="false"
                            android:text="Private"
                            android:textColor="@color/dark_black"
                            android:textSize="16sp" />

                    </RadioGroup>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtNetworking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="left|center"
                    android:text="@string/public_networking_text"
                    android:textColor="@color/underline_color"
                    android:textSize="14sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chkTermsCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:checked="true" />

                    <TextView
                        android:id="@+id/txtTermsCondition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:gravity="left|center"
                        android:text="@string/terms_condition"
                        android:textColor="@color/dark_black"
                        android:textSize="16sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/already_have_an_account_login"
                    android:textColor="@color/dark_black"
                    android:textSize="16sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="SPONSORED BY"
            android:textColor="@color/dark_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/dotted_line_bg" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rclRegisterSponsor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"></android.support.v7.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>