<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_underline_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/lnrGeneratePwdBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back"
                android:transitionName="@string/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/imgLogo"
                android:gravity="center"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/forgot_password_email"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_bg"
            android:gravity="center|left"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/dark_black"
            android:textColorHint="@color/underline_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:textAllCaps="false"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

</LinearLayout>