<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_underline_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:gravity="center"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtSignInEmail"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center|left"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_black"
                    android:textColorHint="@color/underline_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtSignInPwd"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center|left"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_black"
                    android:textColorHint="@color/underline_color"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtForgotPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/dark_black"
                    android:textSize="16sp" />

            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="SPONSORED BY"
            android:textColor="@color/dark_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/dotted_line_bg" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rclRegisterSponsor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"></android.support.v7.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>