<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/lnrBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back"
                android:transitionName="logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/imgLogo"
                android:gravity="center"
                android:text="Edit Profile"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <!--<ImageView-->
        <!--android:id="@+id/imageView"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="75dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_margin="10dp"-->
        <!--android:adjustViewBounds="true"-->
        <!--android:src="@drawable/logo" />-->

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="5dp"-->
        <!--android:layout_marginTop="2dp"-->
        <!--android:background="@drawable/dotted_line_bg"-->
        <!--android:textSize="16sp"-->
        <!--android:textStyle="bold" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtSignUpFName"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center|left"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_black"
                    android:textColorHint="@color/underline_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtSignUpPhone"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center|left"
                    android:padding="8dp"

                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/dark_black"
                    android:textColorHint="@color/underline_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtSignUpCmpName"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center|left"
                    android:hint="@string/company_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_black"
                    android:textColorHint="@color/underline_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtSignUpDesign"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center|left"
                    android:hint="@string/designation"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_black"
                    android:textColorHint="@color/underline_color"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center|left"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Networking : "
                        android:textColor="@color/dark_black"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/rdgProfileType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rdPublic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="Public"
                            android:textColor="@color/dark_black"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/rdPrivate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:checked="false"
                            android:text="Private"
                            android:textColor="@color/dark_black"
                            android:textSize="16sp" />

                    </RadioGroup>


                </LinearLayout>

                <TextView
                    android:id="@+id/txtNetworking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="left|center"
                    android:text="@string/public_networking_text"
                    android:textColor="@color/underline_color"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>